--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "compilefuck"
 description = "Compilefuck is a brainfuck compiler/interpreter written in Rust."
+categories = ["compilers", ]
+keywords = ["compilefuck", "brainfuck", "compiler", "interpreter"]
 version = "0.1.0"
 authors = ["Pedro H. M. <pedromendescraft@gmail.com>"]
+repository = "https://github.com/alt-art/compilef-ck"
+license = "MIT"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
