--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ edition = "2021"
 ahash = "0.8.3"
 anyhow = "1.0.55"
 clap = { version = "4.4.6", features = ["derive"] }
+
+[dev-dependencies]
+serial_test = "2.0.0"
